# lab-raylib-c-sandbox

./: .editorconfig  .gitignore  CMakeLists.txt
scripts/: build_run.ps1  build_run.sh
src/: Assets.cpp  Assets.hpp  Logger.cpp  Logger.hpp  Material.cpp  Material.hpp  PlatformAPI.h  RayLibAPI.h  assets.c  assets.h  logger.c  logger.h  main.c  main.cpp  platform.h  rl.h  shader.c  shader.h
src/shaders/glsl/: splash.fragment.glsl
src/shaders/glsl_es/: splash.fragment.glsl  splash.vertex.glsl
src/wasm/: index.html  serve.js
